tests/enum_into/compile_fail/field/mixing_target_variant_kind.stderr
error: Unexpected mapping to named field while another field mapped to a positional field.
  --> tests/enum_into/compile_fail/field/mixing_target_variant_kind.rs:10:36
   |
10 |         #[enum_into(Target::Struct.b)]
   |                                    ^
